VOD Downloader: Clean up view model

--- a/TwitchDownloaderMAUI/TwitchDownloaderMAUI.csproj
+++ b/TwitchDownloaderMAUI/TwitchDownloaderMAUI.csproj
@@ -88,4 +88,10 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="GlobalSettings.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
